Кнопка піднесення до степеню

--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -1,6 +1,6 @@
-@import "reset";
-@import "variables";
-@import "theme";
+@use "reset";
+@use "variables";
+@use "theme";
 
 body{
   min-width: 400px;
